refactor mvc book example using POO

--- a/mvc/book/views/main_page.html
+++ b/mvc/book/views/main_page.html
@@ -4,4 +4,11 @@
         Link to shorten
     </label>
     <input type="submit" value="OK">
-</form>"
+</form>
+<form action="/lengthen/">
+    <label>
+        <input type="text" name="url" value="" />
+        Short url to expand
+    </label>
+    <input type="submit" value="OK">
+</form>
